fix(sales): correct gross revenue and refund calculation logic in manager dashboard